[package]
name = "pixhawk4_bsp"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"


description = "A board support package for the Pixhawk4 flight (PX4 FMUV4) controller hardware"

[dependencies]
cortex-m = "0.6.2"
embedded-hal = { version = "0.2.4", features = ["unproven"] }
stm32f7 = {version = "0.11"}
#stm32f7xx-hal = {version="0.2.0",features= ["stm32f765","rt"], git="https://github.com/stm32-rs/stm32f7xx-hal"}
stm32f7xx-hal = {version="0.2.0",features= ["stm32f765","rt"], path="../stm32f7xx-hal"}

shared-bus = {version="0.1.4", features=["cortexm"] }
panic-rtt-core = {version="0.1.1", optional=true}
rand_core = "0.5.1"

# internal ms5611 barometer
ms5611-spi = { git= "https://github.com/tstellanova/ms5611-ehal" }

# internal magnetometer (and optional external in GPS unit)
ist8310 = "0.1.1"
hmc5983 = "0.1.3"

# internal Invensense/TDK ICM-20689 6DOF accel/gyro
icm20689 = "0.1.1"

# TODO internal Accel/Gyro: BMI055
# TODO internal LTC4417 power path controller

# FRAM
spi-memory = "0.2.0"

[dev-dependencies]
cortex-m-rt = "0.6.12"
panic-rtt-core = {version="0.1.1"}

# external GPS
#ublox-core = "0.1.1"
#ublox-core =  { git = "https://github.com/tstellanova/ublox-core" }
#ublox-core = { path="../ublox-core"}


[features]
default = []
rttdebug = ["panic-rtt-core"]
