[package]
name = "pixhawk4_bsp"
version = "0.1.1"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"
description = "A board support package for the Pixhawk 4 flight controller (PX4 FMUV4) hardware"
license = "BSD-3-Clause"
repository = "https://github.com/tstellanova/pixhawk4_bsp"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "cortex-m",
    "bsp",
    "stm32f7xx",
    "pixhawk",
]
readme = "README.md"

[dependencies]
cortex-m = "0.6.2"
embedded-hal = { version = "0.2.4", features = ["unproven"] }
stm32f7 = {version = "0.11"}
#stm32f7xx-hal = {version="0.2.0",features= ["stm32f765","rt"], path="../stm32f7xx-hal"}
stm32f7xx-hal = {version="0.2.0",features= ["stm32f765","rt"], git="https://github.com/tstellanova/stm32f7xx-hal", branch ="add_spi_pins"}

shared-bus = {version="0.1.4", features=["cortexm"] }
panic-rtt-core = {version="0.1.1", optional=true}
rand_core = "0.5.1"

# internal ms5611 barometer
ms5611-spi = "0.2.0"

# internal magnetometer (and optional external in GPS unit)
ist8310 = "0.1.1"
hmc5983 = "0.1.3"

# internal Invensense/TDK ICM-20689 6DOF accel/gyro
icm20689 = "0.1.1"

# TODO internal Accel/Gyro: BMI055
# TODO internal LTC4417 power path controller

# FRAM
spi-memory = "0.2.0"

[dev-dependencies]
cortex-m-rt = "0.6.12"
panic-rtt-core = {version="0.1.1"}
#pmw3901-ehal = {path="../pmw3901-ehal", version="0.1"}
pmw3901-ehal = {version="0.1", git="https://github.com/tstellanova/pmw3901-ehal", branch="trunk"}

[features]
default = []
rttdebug = ["panic-rtt-core"]
